--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -7,7 +7,8 @@
     <LinearLayout
             android:orientation="vertical"
             android:layout_width="410dp"
-            android:layout_height="734dp" tools:layout_editor_absoluteY="5dp" tools:layout_editor_absoluteX="-1dp">
+            android:layout_height="734dp" tools:layout_editor_absoluteY="5dp" tools:layout_editor_absoluteX="-1dp"
+            tools:ignore="MissingConstraints">
         <TextView
                 android:text="Login"
                 android:layout_width="match_parent"
